# api/openapi-spec/swagger.json
@@ -1836,12 +1836,15 @@
       }
     },
     ".ImageBuildSpec": {
+      "description": "ImageBuildSpec specifies the desired state of an ImageBuild resource.",
       "type": "object",
       "properties": {
         "amqpOverrides": {
+          "description": "AMQPOverrides to the main controller configuration.",
           "$ref": "#/definitions/.ImageBuildAMQPOverrides"
         },
         "buildArgs": {
+          "description": "BuildArgs are applied to the build at runtime.",
           "type": "array",
           "items": {
             "type": "string",
@@ -1849,19 +1852,23 @@
           }
         },
         "context": {
+          "description": "Context is a remote URL used to fetch the build context.",
           "type": "string"
         },
-        "disableBuildCache": {
+        "disableCacheExport": {
+          "description": "DisableCacheLayerExport will remove the \"inline\" cache metadata from the image configuration.",
           "type": "boolean"
-        },
-        "disableLayerCacheExport": {
-          "type": "boolean"
-        },
-        "imageSizeLimit": {
-          "type": "integer",
-          "format": "int64"
         },
         "images": {
+          "description": "Images is a list of images to build and push.",
+          "type": "array",
+          "items": {
+            "type": "string",
+            "default": ""
+          }
+        },
+        "importCache": {
+          "description": "ImportCacheFrom one or more canonical image references when building the images.",
           "type": "array",
           "items": {
             "type": "string",
@@ -1869,9 +1876,15 @@
           }
         },
         "logKey": {
+          "description": "LogKey is used to uniquely annotate build logs for post-processing",
           "type": "string"
         },
+        "noBuildCache": {
+          "description": "NoBuildCache will disable the use of the local cache when building the images.",
+          "type": "boolean"
+        },
         "registryAuth": {
+          "description": "RegistryAuth credentials used to pull/push images from/to private registries.",
           "type": "array",
           "items": {
             "default": {},
